--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.2.0",
+    "http-status-codes": "^2.3.0",
+    "mongo-db": "^1.0.2",
+    "mongodb": "^6.3.0",
     "mongoose": "^7.6.4",
-    "nodemon": "^3.0.1"
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^5.0.4",
+    "nodemon": "^3.0.2"
   }
 }
