--- a/.env
+++ b/.env
@@ -4,4 +4,8 @@ DATABASE_USERNAME = 'dummy'
 DATABASE_PASSWORD = 'iamadummy'
 DATABASE_URL = 'nodeexpressprojects.eof4rpe.mongodb.net'
 
+
+JWT_SECRET = 'oaiitacgeppfupmyapxvqorbuqejl'
+JWT_LIFETIME='30d'
+
 PORT = 8000
